--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-# Project exclude paths
-/target/
+/account-service/build/
+/.gradle/
+/gradle/
+/bill-service/build/
+/build/
+/config-service/build/
+/deposit-service/build/
+/gateway/build/
+/notification-service/build/
+/registry/build/
 /.idea/
