--- a/config-service/src/main/resources/services/bill-service.yml
+++ b/config-service/src/main/resources/services/bill-service.yml
@@ -8,8 +8,8 @@ spring:
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5431/bill_service_database
-    username: postgres
-    password: root
+    username: user
+    password: password
     driver-class-name: org.postgresql.Driver
 
 server:
