--- a/config-service/src/main/resources/services/notification-service.yml
+++ b/config-service/src/main/resources/services/notification-service.yml
@@ -4,7 +4,8 @@ server:
 spring:
   rabbitmq:
     port: 5672
-    host: rabbitmq
+#    host: rabbitmq
+    host: localhost
     username: guest
     password: guest
     listener:
