--- a/config-service/src/main/resources/services/application.yml
+++ b/config-service/src/main/resources/services/application.yml
@@ -1,6 +1,6 @@
 logging:
   level:
-    org.springframework.security: INFO
+    org.springframework: DEBUG
 
 hystrix:
   command:
@@ -17,3 +17,4 @@ eureka:
     service-url:
 #      defaultZone: http://registry:8761/eureka/
       defaultZone: http://localhost:8761/eureka/
+      fetch-registry: true
