--- a/config-service/src/main/resources/services/deposit-service.yml
+++ b/config-service/src/main/resources/services/deposit-service.yml
@@ -14,7 +14,8 @@ spring:
 
   rabbitmq:
     port: 5672
-    host: rabbitmq
+#    host: rabbitmq
+    host: localhost
     username: guest
     password: guest
     listener:
