--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
+  config:
+    import: configserver:http://localhost:8001/
   application:
-    name: gateway
+    name: deposit-service
   cloud:
     config:
 #      uri: http://config-service:8001
