--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
+  config:
+    import: configserver:http://localhost:8001/
   application:
-    name: deposit-service
+    name: gateway
   cloud:
     config:
 #      uri: http://config-service:8001
