--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include 'account-service'
 include 'bill-service'
 include 'deposit-service'
 include 'config-service'
-include 'gateway'
 include 'notification-service'
 include 'registry'
+include 'gateway-service'
 
