--- a/config-service/src/main/resources/services/gateway-service.yml
+++ b/config-service/src/main/resources/services/gateway-service.yml
@@ -3,17 +3,20 @@ spring:
     gateway:
       routes:
         - id: account-service
-          uri: http://localhost:8081
+#          uri: http://localhost:8081
+          uri: lb://account-service
           predicates:
             - Path=/accounts/**
 
         - id: bill-service
-          uri: http://localhost:8082
+#          uri: http://localhost:8082
+          uri: lb://bill-service
           predicates:
             - Path=/bills/**
 
         - id: deposit-service
-          uri: http://localhost:8080
+          uri: lb://deposit-service
+#          uri: http://localhost:8080
           predicates:
             - Path=/deposits/**
 server:
