--- a/config-service/src/main/resources/services/application.yml
+++ b/config-service/src/main/resources/services/application.yml
@@ -16,5 +16,5 @@ eureka:
   client:
     service-url:
 #      defaultZone: http://registry:8761/eureka/
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.1.157:8761/eureka/
       fetch-registry: true
