--- a/config-service/src/main/resources/services/bill-service.yml
+++ b/config-service/src/main/resources/services/bill-service.yml
@@ -7,7 +7,7 @@ spring:
     properties:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5431/bill_service_database
+    url: jdbc:postgresql://192.168.1.157:5431/bill_service_database
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
