--- a/config-service/src/main/resources/services/deposit-service.yml
+++ b/config-service/src/main/resources/services/deposit-service.yml
@@ -7,7 +7,7 @@ spring:
     properties:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5431/deposit_service_database
+    url: jdbc:postgresql://192.168.1.157:5431/deposit_service_database
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
@@ -15,9 +15,13 @@ spring:
   rabbitmq:
     port: 5672
 #    host: rabbitmq
-    host: localhost
+#    host: localhost
+    host: 192.168.1.157
     username: guest
     password: guest
     listener:
       direct:
         default-requeue-rejected: true
+
+server:
+  port: 8079
