--- a/config-service/src/main/resources/services/notification-service.yml
+++ b/config-service/src/main/resources/services/notification-service.yml
@@ -5,7 +5,8 @@ spring:
   rabbitmq:
     port: 5672
 #    host: rabbitmq
-    host: localhost
+#    host: localhost
+    host: 192.168.1.157
     username: guest
     password: guest
     listener:
