--- a/registry/src/main/resources/application.yml
+++ b/registry/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   config:
-    import: configserver:http://localhost:8001/
+    import: configserver:http://192.168.1.157:8001/
   application:
     name: registry
   cloud:
     config:
 #      uri: http://config-service:8001
-      uri: http://localhost:8001
+      uri: http://192.168.1.157:8001
       fail-fast: true
       password: admin
       username: user
