Added docker-compose.yml and wait-for.sh

--- a/config-service/src/main/resources/services/deposit-service.yml
+++ b/config-service/src/main/resources/services/deposit-service.yml
@@ -14,9 +14,9 @@ spring:
 
   rabbitmq:
     port: 5672
-#    host: rabbitmq
+    host: rabbitmq
 #    host: localhost
-    host: 192.168.1.157
+#    host: 192.168.1.157
     username: guest
     password: guest
     listener:
