--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   config:
-    import: configserver:http://192.168.1.157:8001/
+    import: configserver:http://config-service:8001/
   application:
     name: account-service
   cloud:
     config:
-#      uri: http://config-service:8001
-      uri: http://192.168.1.157:8001
+      uri: http://config-service:8001
+#      uri: http://192.168.1.157:8001
       fail-fast: true
       password: admin
       username: user
