--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: configserver:http://localhost:8001/
+    import: configserver:http://config-service:8001/
   application:
     name: deposit-service
   cloud:
