--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   config:
-    import: configserver:http://localhost:8001/
+    import: configserver:http://config-service:8001/
   application:
     name: gateway-service
   cloud:
     config:
-      #      uri: http://config-service:8001
-      uri: http://localhost:8001
+      uri: http://config-service:8001
+#     uri: http://localhost:8001
       fail-fast: true
       password: admin
       username: user
