--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     testImplementation "org.assertj:assertj-core:3.23.1"
     testImplementation "org.testng:testng:7.6.1"
     testImplementation "org.jmockit:jmockit:1.49"
-    testImplementation "junit:junit:4.13"
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "org.junit.jupiter:junit-jupiter:5.9.0"
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.9.0"
 }
