--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation "org.postgresql:postgresql:42.3.6"
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "com.h2database:h2-mvstore:2.1.214"
+    testImplementation "com.h2database:h2:2.1.214"
     testImplementation "org.mockito:mockito-core:4.6.1"
     testImplementation "org.assertj:assertj-core:3.23.1"
     testImplementation "org.testng:testng:7.6.1"
